fix: allow Popper `anchorEl` prop to be optional

--- a/src/docs/components/popper.mdx
+++ b/src/docs/components/popper.mdx
@@ -41,7 +41,7 @@ Otherwise, you can use your own favourite Popper implementation in place of `Pop
 ## Props
 | Prop Name | Type | Is Required | Default Value | Description |
 |-|-|-|-|-|
-| anchorEl| `func or object`| required| | Anchor element ref|
+| anchorEl| `func or object`| optional| | Anchor element |
 | children| `node`| optional| | Popper content|
 | clickOutsideWhiteList| `array`| optional| | Click outside white list, will not close the Popper, if clicked *|
 | onClickOutside| `func`| optional| | Callback on click outside *|
