fix: modernize the language for allowable list of refs in Popper and move to it's own package.
As Popper is an optional element, move to it's own package.

--- a/src/docs/components/calendar.mdx
+++ b/src/docs/components/calendar.mdx
@@ -207,7 +207,7 @@ Validate date ranges with your own rules using the `isRangeValid` prop.
 |-|-|-|-|-|
 | adapter| `func`| optional| | Date API adapter|
 | allowRange| `bool`| optional| `false`| When `true` will select a date range|
-| clickOutsideWhiteList| `array`| optional| `[]`| Array of refs to ignore clicks, when determining whether the user clicked outside the Calendar|
+| ignoreClickOutsideRefs| `array`| optional| `[]`| Array of refs to ignore clicks, when determining whether the user clicked outside the Calendar|
 | initialSelectedDate| `object or array`| optional| | The initial selectedDate (for un-controlled use-case)|
 | initialVisibleFromMonth| `object`| optional| | The initial visible from calendar month (unless date is set)|
 | isDayDisabled| `func`| optional| | Callback to set days as disabled   @param day - Date to check        @returns true when disabled|
