--- a/src/docs/components/calendarProvider.mdx
+++ b/src/docs/components/calendarProvider.mdx
@@ -30,7 +30,7 @@ Refer to the [useDateInput](https://mark-tate.github.io/use-date-input/useDateIn
 | adapter| `func`| optional| | Date API adapter|
 | allowRange| `bool`| optional| `false`| Allow date range|
 | children| `node`| optional| | Calendar children|
-| clickOutsideWhiteList| `array`| optional| `[]`| Array of elements to ignore, when determining a click outside, used to link elements, like date inputs|
+| ignoreClickOutsideRefs| `array`| optional| `[]`| Array of elements to ignore, when determining a click outside, used to link elements, like date inputs|
 | components| `object`| optional| `{}`| Custom Component overrides|
 | initialEnableKeyboardNavigation| `bool`| optional| `false`| Initial state of keyboard navigation|
 | initialSelectedDate| `object or array`| optional| | Initial selected date|
