--- a/src/docs/home.mdx
+++ b/src/docs/home.mdx
@@ -3,4 +3,12 @@ name: Home
 route: /
 ---
 
-This is the home page
+<h1>BUILD</h1><h2>your own datepicker, in minutes not days</h2>
+
+`use-date-input` is designed to be composable, use your theme, compose your own UI elements.  
+
+## Features
+
+## Roadmap
+
+
