fix: use named exports for date adapters

--- a/src/docs/components/animatedMonthGroup.mdx
+++ b/src/docs/components/animatedMonthGroup.mdx
@@ -6,7 +6,7 @@ import { useState, useRef } from 'react';
 import Button from '@material-ui/core/Button';
 import { Playground } from "docz";
 import { AnimatedMonthGroup, CalendarProvider } from "@use-date-input/core";
-import dateAdapter from '@use-date-input/date-fns-adapter';
+import { adapter as dateAdapter } from '@use-date-input/date-fns-adapter';
 import { DemoContent as AddYourComponentHere } from "../../gatsby-theme-docz/components/DemoContent";
 import { DemoButton } from "../../gatsby-theme-docz/components/DemoButton";
 import { DemoButtonBar } from "../../gatsby-theme-docz/components/DemoButtonBar";
