--- a/src/docs/components/header.mdx
+++ b/src/docs/components/header.mdx
@@ -4,7 +4,7 @@ route: /header
 ---
 import { Playground } from "docz";
 import { Header, CalendarProvider } from "@use-date-input/core";
-import dateAdapter from '@use-date-input/date-fns-adapter';
+import { adapter as dateAdapter } from '@use-date-input/date-fns-adapter';
 
 # Header
 The `Header` component renders the `Calendar` header.
