--- a/src/docs/components/month.mdx
+++ b/src/docs/components/month.mdx
@@ -4,7 +4,7 @@ route: /month
 ---
 import { Playground } from "docz";
 import { Month, CalendarProvider, useDateAPI } from "@use-date-input/core";
-import dateAdapter from '@use-date-input/date-fns-adapter';
+import { adapter as dateAdapter } from "@use-date-input/date-fns-adapter";
 
 # Month
 The `Month` components renders a calendar month.
