--- a/src/docs/components/monthGroup.mdx
+++ b/src/docs/components/monthGroup.mdx
@@ -4,7 +4,7 @@ route: /monthGroup
 ---
 import { Playground } from "docz";
 import { MonthGroup, CalendarProvider, useDateAPI } from "@use-date-input/core";
-import dateAdapter from '@use-date-input/date-fns-adapter';
+import { adapter as dateAdapter } from '@use-date-input/date-fns-adapter';
 
 # MonthGroup
 The `MonthGroup` components renders all the visible calendar `Month` components.
