--- a/src/docs/components/popper.mdx
+++ b/src/docs/components/popper.mdx
@@ -6,7 +6,7 @@ import { useState } from 'react';
 import { Playground } from "docz";
 import { CalendarProvider } from "@use-date-input/core";
 import { Popper } from "@use-date-input/popper";
-import dateAdapter from '@use-date-input/date-fns-adapter';
+import { adapter as dateAdapter } from '@use-date-input/date-fns-adapter';
 import { DemoButton } from "../../gatsby-theme-docz/components/DemoButton";
 import { DemoContent as AddYourComponentHere } from "../../gatsby-theme-docz/components/DemoContent";
 
