--- a/src/docs/components/root.mdx
+++ b/src/docs/components/root.mdx
@@ -4,7 +4,7 @@ route: /root
 ---
 import { Playground } from "docz";
 import { Calendar, CalendarProvider, Root } from "@use-date-input/core";
-import dateAdapter from '@use-date-input/date-fns-adapter';
+import { adapter as dateAdapter } from "@use-date-input/date-fns-adapter";
 import { DemoContent as AddYourComponentHere } from "../../gatsby-theme-docz/components/DemoContent";
 
 # Root
