--- a/src/docs/components/weekHeader.mdx
+++ b/src/docs/components/weekHeader.mdx
@@ -4,7 +4,7 @@ route: /weekHeader
 ---
 import { Playground } from "docz";
 import { CalendarProvider, WeekHeader } from "@use-date-input/core";
-import dateAdapter from '@use-date-input/date-fns-adapter';
+import { adapter as dateAdapter } from '@use-date-input/date-fns-adapter';
 
 # WeekHeader
 The `WeekHeader` component renders the days of the week within the month header.
