--- a/src/docs/hooks/useCalendarDispatch.mdx
+++ b/src/docs/hooks/useCalendarDispatch.mdx
@@ -4,7 +4,7 @@ route: /useCalendarDispatch
 ---
 import { Playground } from 'docz'
 import { calendarActions, useCalendarDispatch, Calendar, CalendarProvider} from '@use-date-input/core';
-import dateAdapter from '@use-date-input/date-fns-adapter';
+import { adapter as dateAdapter } from "@use-date-input/date-fns-adapter";
 import { DemoButton } from "../../gatsby-theme-docz/components/DemoButton";
 import { DemoButtonBar } from "../../gatsby-theme-docz/components/DemoButtonBar";
 
