--- a/src/docs/hooks/useCalendarProps.mdx
+++ b/src/docs/hooks/useCalendarProps.mdx
@@ -6,7 +6,7 @@ import { useState } from 'react';
 import { Playground } from 'docz'
 import { useDateAPI, useCalendarProps, Calendar, CalendarProvider} from '@use-date-input/core';
 import { formatNames } from '@use-date-input/common';
-import dateAdapter from '@use-date-input/date-fns-adapter';
+import { adapter as dateAdapter } from '@use-date-input/date-fns-adapter';
 
 # useCalendarProps
 
