--- a/src/docs/theming.mdx
+++ b/src/docs/theming.mdx
@@ -53,7 +53,7 @@ If you want to style the default components then create a new theme, using the `
 
 ```javascript
 // import { Calendar } from "@use-date-input/core";
-// import dateAdapter from "@use-date-input/date-fns-adapter";
+// import { adapter as dateAdapter } from "@use-date-input/date-fns-adapter";
 
 const yourTheme = {
     AnimatedGroup: { /* Overidden component style */ },,
