--- a/src/docs/hooks/useDateRangeInput.mdx
+++ b/src/docs/hooks/useDateRangeInput.mdx
@@ -6,7 +6,7 @@ import { useCallback, useRef, useState } from 'react'
 import { Props, Playground } from 'docz';
 import { useDateRangeInput } from '@use-date-input/core';
 import { Popper } from '@use-date-input/popper';
-import dateAdapter from '@use-date-input/date-fns-adapter';
+import { adapter as dateAdapter } from "@use-date-input/date-fns-adapter";
 import { parse, isValid } from 'date-fns';
 
 # useDateRangeInput
