--- a/src/docs/components/calendarProvider.mdx
+++ b/src/docs/components/calendarProvider.mdx
@@ -4,7 +4,7 @@ route: /calendarProvider
 ---
 import {
   CalendarProvider
-} from "@/core/src/CalendarProvider";
+} from "@use-date-input/core";
 
 # CalendarProvider
 A `CalendarProvider` creates a Context required to link a `Calendar` with other components and holds the state of the component.  
