--- a/src/docs/composition.mdx
+++ b/src/docs/composition.mdx
@@ -11,7 +11,7 @@ import List from '@material-ui/core/List';
 import ListItem from '@material-ui/core/ListItem';
 import ListItemText from '@material-ui/core/ListItemText';
 import { adapter as dateAdapter } from '@use-date-input/date-fns-adapter';
-import DemoHeader from "../gatsby-theme-docz/components/DemoHeader";
+import { DemoHeader } from "../gatsby-theme-docz/components/DemoHeader";
 import getDay from "date-fns/getDay";
 
 # Composition
