feat: add home page

--- a/src/docs/home.mdx
+++ b/src/docs/home.mdx
@@ -1,6 +1,6 @@
 ---
 name: Home
-route: /home
+route: /
 fullPage: true
 ---
 
@@ -13,8 +13,6 @@ import { Hero3 } from "../gatsby-theme-docz/components/Hero3";
 import { Hero4 } from "../gatsby-theme-docz/components/Hero4";
 import { Hero5 } from "../gatsby-theme-docz/components/Hero5";
 import { Hero6 } from "../gatsby-theme-docz/components/Hero6";
-
-import Paper from "@material-ui/core/Paper";
 
 <Heading>use-date-input</Heading>
 <Carousel>
